Display the navigation on the error pages, and wrap the error css to avoid display conflict.

--- a/app/javascript/src/errors.scss
+++ b/app/javascript/src/errors.scss
@@ -15,15 +15,15 @@
     width: 40%;
 }
 
-div h1{
+.four-zero-four div h1{
     color: #d33f3f;
 }
 
-.text-wrapper{
+.four-zero-four .text-wrapper{
     margin-top: 2em;
 }
 
-a{
+.four-zero-four a{
     color: #676DA4;
     font-size: 20px;
 }
